cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS "-std=c++11 -Wall ${CMAKE_CXX_FLAGS} -g")
add_executable(TaskSim TaskSim.cxx Loader.cxx Logger.cxx Scheduler.cxx Task.cxx Schedule.cxx)
add_executable(loggertest Logger.cxx Task.cxx LoggerTest.cxx)
target_link_libraries (TaskSim boost_program_options)
target_link_libraries (loggertest boost_program_options)